app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    color-scheme: dark;
    max-width: 100%;
    overflow-x: hidden;
}

:root {
    --foreground-rgb: 0, 0, 0;
    --background-start-rgb: 214, 219, 220;
    --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
    :root {
        --foreground-rgb: 255, 255, 255;
        --background-start-rgb: 0, 0, 0;
        --background-end-rgb: 0, 0, 0;
    }
}

body {
    color: rgb(var(--foreground-rgb));
    background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
}

:root {
    font-family: Inter, sans-serif;
    font-feature-settings: "liga"1, "calt"1, "ss03" !important;
    /* fix for Chrome */
}

@supports (font-variation-settings: normal) {
    :root {
        font-family: InterVariable, sans-serif;
    }
}

@media print {
    body {
        margin: 0 !important;
    }
}

.main-container {
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
}

.ck-content {
    line-height: 1.6;
    word-break: break-word;
}

.editor-container_balloon-editor .editor-container__editor {
    min-width: 795px;
    max-width: 795px;
}

svg {
    display: none;
}

